Step-003/terraform-live-exercise/security-group.tf
resource "aws_security_group" "http-allow" {
  name = "Nazwa 1"
  description = "HTTP and HTTPS access to VPC ${aws_vpc.vpc-test1.id}"
  vpc_id = aws_vpc.vpc-test1.id

  ingress {
    from_port = 80
    protocol = "TCP"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    protocol = "TCP"
    to_port = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
